-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 14.0.0
-
None
-
aa7ff1a5f (14.0)
When the QML Languare Server support is enabled in QtC, QML snippets defined in Settings / Text Editor / Snippets are ignored and replaced by a list that I believe is provided by qmlls. This applies to both default snippets and custom ones.
I do want to use qmlls but I also do want to use the custom snippets defined in my IDE.
For Gerrit Dashboard: QTCREATORBUG-31322 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
584097,2 | QmlJSEditor: add qml snippets to qmlls provided completions | 14.0 | qt-creator/qt-creator | Status: MERGED | +2 | +1 |