QmlJSEditor: add qml snippets to qmlls provided completions

Fixes: QTCREATORBUG-31322
Change-Id: I46cc57c621d04a8d05438778a65e6e2c50498355
Reviewed-by: Sami Shalayel <sami.shalayel@qt.io>
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>